--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,13 @@
 /*******
 COLOR CHEAT SHEET
+https://coolors.co/000000-0c1821-0e1b25-101d29-121f2d-142131-1b2a41-324a5f-7f8a9e-ccc9dc
+000000- black 
+0c1821- ink black 
+0e1b25- ink black 
+101d29- ink black 
+121f2d- ink black 
+142131- prussian blue
+1b2a41- prussian blue
 
 
 
@@ -11,3 +19,4 @@ COLOR CHEAT SHEET
 /************************/
 /******** FONTS *********/
 /************************/
+body, p, div 
